--- a/html/menu_délice.html
+++ b/html/menu_délice.html
@@ -29,7 +29,7 @@
         </section>
         <div class="content">
             <section class="title">
-                <h1 classe>À la française
+                <h1>À la française
                 </h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart"></i>
@@ -162,7 +162,7 @@
             </ul>
         </div>
     </footer>
-    </div>
+    
 </body>
 
 </html>
