--- a/html/menu_française.html
+++ b/html/menu_française.html
@@ -29,7 +29,7 @@
         </section>
         <div class="content">
             <section class="title">
-                <h1 classe>La note enchantée
+                <h1>La note enchantée
                 </h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart"></i>
@@ -177,7 +177,7 @@
             </ul>
         </div>
     </footer>
-    </div>
+    
 </body>
 
 </html>
