--- a/html/menu_la_note.html
+++ b/html/menu_la_note.html
@@ -29,7 +29,7 @@
         </section>
         <div class="content">
             <section class="title">
-                <h1 classe>Le délice des sens
+                <h1>Le délice des sens
                 </h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart"></i>
@@ -159,7 +159,7 @@
             </ul>
         </div>
     </footer>
-    </div>
+    
 </body>
 
 </html>
