--- a/html/menu_la_palette.html
+++ b/html/menu_la_palette.html
@@ -30,7 +30,7 @@
 
         <div class="content">
             <section class="title">
-                <h1 classe>La palette du goût</h1>
+                <h1>La palette du goût</h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-solid fa-heart"></i>
@@ -161,7 +161,7 @@
             </ul>
         </div>
     </footer>
-    </div>
+    
 </body>
 
 </html>
