--- a/html/menu_la_palette.html
+++ b/html/menu_la_palette.html
@@ -24,9 +24,9 @@
         <img class="header__logo" src="../images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero__main">
+        <div class="hero__main">
             <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la plats">
-        </section>
+        </div>
 
         <div class="content">
             <section class="title">
