--- a/html/menu_délice.html
+++ b/html/menu_délice.html
@@ -20,16 +20,17 @@
     <header class="header">
         <span>
             <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+           
         </span>
         <img class="header__logo" src="../images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero__main">
-            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la plats">
-        </section>
+        <div class="hero__main">
+            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la plats">
+        </div>
         <div class="content">
             <section class="title">
-                <h1>À la française
+                <h1>La délice des sens
                 </h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart"></i>
