--- a/html/menu_française.html
+++ b/html/menu_française.html
@@ -24,12 +24,12 @@
         <img class="header__logo" src="../images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
     <main class="main">
-        <section class="hero__main">
-            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la plats">
-        </section>
+        <div class="hero__main">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la plats">
+        </div>
         <div class="content">
             <section class="title">
-                <h1>La note enchantée
+                <h1>À la française 
                 </h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart"></i>
